fixed bug on mobile view

--- a/src/app/component/stunden-overview/stunden-overview.component.less
+++ b/src/app/component/stunden-overview/stunden-overview.component.less
@@ -52,6 +52,7 @@
     position: relative;
     overflow-y: hidden;
     margin-right: 3rem;
+    pointer-events: all;
 }
 
 #timetable{
@@ -85,6 +86,8 @@
 
     #stundenplan{
         margin: 0;
+        margin-top: 3.5rem;
+        padding-top: -3.5rem;
         height: max-content;
     }
 
